# Embedded_Sem6

./: .gitignore  README.md  app.py  har_fpga_all_in_one.ipynb  pyproject.toml
artifacts/: har_model.keras  scaler.json  weights_readable.txt
artifacts/1dcnn/: har_model.keras  model_spec.json  model_weights.mem  training_history.json  weights_readable.txt
artifacts/1dcnn/quantization/: results.json
artifacts/1dcnn/quantization/fp16/: model_weights_fp16.mem
artifacts/1dcnn/quantization/int16/: metadata.json  (+1 more)
artifacts/2dcnn/: har_model.keras  model_spec.json  model_weights.mem  scaler.json  training_history.json  weights_readable.txt
artifacts/2dcnn/quantization/: results.json
artifacts/cnn_lstm/: har_model.keras  model_spec.json  model_weights.mem  training_history.json  weights_readable.txt
artifacts/cnn_lstm/quantization/: results.json
artifacts/mlp/: har_model.keras  model_spec.json  model_weights.mem  training_history.json  weights_readable.txt
artifacts/mlp/quantization/: results.json
artifacts/quantization/: results.json
artifacts/quantization/fp16/: metadata.json  model_weights_fp16.mem
artifacts/quantization/int16/: model_weights_int16.mem
artifacts/quantization/int8/: metadata.json  model_weights_int8.mem
artifacts/wclstm/: har_model.keras  model_spec.json  model_weights.mem  scaler.json  training_history.json  weights_readable.txt
artifacts/wclstm/quantization/: results.json
configs/: features.json  training.json
src/har_fpga/: compare.py  data.py  export.py  infer.py  model.py  preprocess.py  quantize.py  train.py
(+25 files in other folders)
