[project]
name = "har-fpga"
version = "1.0.0"
description = "Lightweight 1D-CNN for Human Activity Recognition — FPGA deployment pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorflow>=2.18,<2.19",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "requests>=2.31",
]

[project.scripts]
har-train   = "har_fpga.train:main"
har-infer   = "har_fpga.infer:main"
har-export  = "har_fpga.export:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/har_fpga"]

[tool.uv]
override-dependencies = [
    "tensorflow-io-gcs-filesystem; sys_platform != 'win32'",
]
